add more new maintainers (#952)
* add more new maintainers

* Update lessons.html

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -53,7 +53,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td>
       <a href="{{site.baseurl}}/team/#devenyi_gabriel">Gabriel Devenyi</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath</a>,
-      Colin Morris
+      Colin Morris,
+      <a href="{{site.baseurl}}/team/#pitchers_will">Will Pitchers</a>
     </td>
   </tr>
   <tr id="git">
@@ -83,7 +84,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>
+      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, 
+      Jane Wyngaard
     </td>
   </tr>
   <tr id="python">
@@ -103,7 +105,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python"></a></td>
       <td>
           <a href="{{site.baseurl}}/team/#moore_nathan">Nathan Moore</a>,
-          Allen Lee
+          Allen Lee, Anne Fouilloux
       </td>
   </tr>
   <tr id="r-prog">
@@ -112,7 +114,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>,
+      <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>, Katrin Leinweber
     </td>
   </tr>
   <tr id="r-reproducible">
@@ -122,7 +124,9 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wright_thomas">Thomas Wright</a>,
-      <a href="{{site.baseurl}}/team/#zimmerman_naupaka">Naupaka Zimmerman</a>
+      <a href="{{site.baseurl}}/team/#zimmerman_naupaka">Naupaka Zimmerman</a>,
+      <a href="{{site.baseurl}}/team/#oliver_jeffrey">Jeffrey Oliver</a>,
+      David Mawdsley
     </td>
   </tr>
   <tr id="matlab">
