--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -154,7 +154,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="https://carpentries.github.io/instructor-training/reference" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#becker_erin">Erin Becker</a>,
-      <a href="{{site.baseurl}}/team/#koch_christina.html">Christina Koch</a>
+      <a href="{{site.baseurl}}/team/#koch_christina.html">Christina Koch</a>,
+      <a href="{{site.baseurl}}/team/#word_karen.html">Karen Word</a>
     </td>
   </tr>
 </table>
@@ -301,12 +302,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="http://alex-konovalov.github.io/gap-lesson" target="_blank" class="icon-browser" title="icon-browser"></a></td>
     <td><a href="https://github.com/alex-konovalov/gap-lesson" target="_blank" class="icon-github" title="icon-github"></a></td>
     <td><a href="{{site.baseurl}}/team/#konovalov_alexander">Alexander Konovalov</a></td>
-  </tr>
-  <tr>
-    <td>Plotting and Programming in Python</td>
-    <td><a href="https://swcarpentry.github.io/python-novice-gapminder" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="https://github.com/swcarpentry/python-novice-gapminder" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.baseurl}}/team/#ntmoore">Nathan Moore</a></td>
   </tr>
    
 </table>
