Fix anchor link for Will

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -54,7 +54,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <a href="{{site.baseurl}}/team/#devenyi_gabriel">Gabriel Devenyi</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath</a>,
       Colin Morris,
-      <a href="{{site.baseurl}}/team/#pitchers_will">Will Pitchers</a>
+      <a href="{{site.baseurl}}/team/#pitchers_w">Will Pitchers</a>
     </td>
   </tr>
   <tr id="git">
