Updates for transition to CI

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,11 +14,11 @@ excerpt: Contact Software Carpentry by email or through Twitter
   please contact:
 </p>
 <p>
-  Software Carpentry Foundation
+  The Carpentries
   <br/>
-  c/o NumFOCUS
+  c/o Community Initiatives
   <br/>
-  P.O. Box 90596
+  354 Pine St. Suite 700
   <br/>
-  Austin, TX 78709
+  San Francisco, CA 94104
 </p>
