--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -132,6 +132,15 @@ excerpt: History of the Software Carpentry Foundation
   <a href="{{site.baseurl}}/team/#duckles.jonah">Jonah Duckles</a> began work
   as the Foundation's new Executive Director.
 </p>
+<p>
+In February 2018, Software Carpentry and Data Carpentry merged their projects together
+into a new project, The Carpentries, sponsored by <a href="http://communityin.org">Community Initiatives</a>.
+With this merger, Software Carpentry has combined staff, budget and governance to form the new project.
+The Carpentries continue the work of Software Carpentry and Data Carpentry, realizing that
+the communities of instructors, members and lesson developers are stronger working together. With over 50
+member organizations in 10 countries, The Carpentries seek to build and grow communities of practice around
+computational skills development for researchers.
+</p>
 <div class="container">
   <div class="row">
     <div class="medium-4 columns" align="center">
