--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -21,14 +21,8 @@ excerpt: Our current partners, including our sibling organization, Data Carpentr
   </div>
   <div class="medium-6 columns">
     <p class="imgpar">
-      <img src="{{site.filesurl}}/orgs/numfocus.jpg" alt="NumFOCUS" />
-      We are very grateful to our fiscal sponsor, <a href="http://numfocus.org">NumFOCUS</a>.
-      Its aim to promote the use of accessible and reproducible computing in science and technology
-      through educational programs,
-      the promotion of high-level languages,
-      reproducible scientific research,
-      and open-code development,
-      and an increase in collaborative research tools and documentation.
+      <img src="{{site.filesurl}}/orgs/communityin.png" alt="Community Initiatives" />
+      We are very grateful to our fiscal sponsor, <a href="http://communityin.org">Community Initiatives</a>.
     </p>
   </div>
 </div>
