--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -252,7 +252,7 @@ excerpt: checklist for workshop operations
 <p>
   The Software Carpentry Foundation is able to accept payment of administrative fees
   through <a href="{{site.paypal_url}}">PayPal</a>
-  or by check or wire transfer to NumFOCUS.
+  or by check or wire transfer to Community Initiatives.
   Please <a href="mailto:{{site.contact}}">contact us</a> to request an invoice
   as soon as the workshop's date and instructors have been confirmed.
 </p>
