--- a/pages/license.html
+++ b/pages/license.html
@@ -116,7 +116,7 @@ excerpt: Our lessons are made available under a Creative Commons Attribution lic
 
 <p>
   "Software Carpentry" and the Software Carpentry logo are registered trademarks of
-  <a href="http://numfocus.org">NumFOCUS</a>.
+  <a href="http://communityin.org">Community Initiatives</a>.
 </p>
 
 <!--
