--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
 <p>
   The <a href="{{site.baseurl}}/scf/">Software Carpentry Foundation</a>
   and its sibling organization <a href="{{site.dc_url}}">Data Carpentry</a>
-  are part of The Carpentries a fiscally sponsored project of <a href="http://communityin.org">Community Initiatives</a>,
+  are part of The Carpentries, a fiscally sponsored project of <a href="http://communityin.org">Community Initiatives</a>,
   a 501(c)3 non-profit incorporated in the United States.
 </p>
 
