change org to project

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -5,7 +5,7 @@ title: Our Partners
 redirect_from:
   - /scf/supporters.html
   - /scf/orgmembers
-excerpt: Our current partners, including our sibling organization, Data Carpentry
+excerpt: Our current partners, including our sibling project, Data Carpentry
 ---
 <div class="row">
   <div class="medium-6 columns">
