--- a/pages/about.html
+++ b/pages/about.html
@@ -16,8 +16,8 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
 </p>
 <p>
   The <a href="{{site.baseurl}}/scf/">Software Carpentry Foundation</a>
-  and its sibling organization <a href="{{site.dc_url}}">Data Carpentry</a>
-  are part of The Carpentries, a fiscally sponsored project of <a href="http://communityin.org">Community Initiatives</a>,
+  and its sibling project <a href="{{site.dc_url}}">Data Carpentry</a>
+  have merged to become The Carpentries, a fiscally sponsored project of <a href="http://communityin.org">Community Initiatives</a>,
   a 501(c)3 non-profit incorporated in the United States.
 </p>
 
