--- a/pages/about.html
+++ b/pages/about.html
@@ -10,13 +10,13 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
   the computing skills they need to get more done in less time and with less pain.
   Our <a href="{{site.baseurl}}/team/">volunteer instructors</a>
   have run <a href="{{site.baseurl}}/workshops/past/">hundreds of events</a>
-  for over 34,000 researchers since 2012.
+  for more than 34,000 researchers since 2012.
   All of our <a href="{{site.baseurl}}/lessons/">lesson materials</a> are freely reusable
   under the <a href="{{site.baseurl}}/license/#cc-by">Creative Commons - Attribution license</a>.
 </p>
 <p>
   The <a href="{{site.baseurl}}/scf/">Software Carpentry Foundation</a>
-  and its sibling project <a href="{{site.dc_url}}">Data Carpentry</a>
+  and its sibling project, <a href="{{site.dc_url}}">Data Carpentry</a>,
   have merged to become The Carpentries, a fiscally sponsored project of <a href="http://communityin.org">Community Initiatives</a>,
   a 501(c)3 non-profit incorporated in the United States.
 </p>
