fix python maintainer list

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -95,7 +95,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#bekolay_trevor">Trevor Bekolay</a>,
-      <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>
+      <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>,
+      Anne Fouilloux
     </td>
   </tr>
   <tr id="python-gap">
@@ -105,7 +106,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python"></a></td>
       <td>
           <a href="{{site.baseurl}}/team/#moore_nathan">Nathan Moore</a>,
-          Allen Lee, Anne Fouilloux
+          Allen Lee, Sourav Singh
       </td>
   </tr>
   <tr id="r-prog">
