add instructor guide column in lesson page

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -43,6 +43,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <th>Site</th>
     <th>Repository</th>
     <th>Reference</th>
+    <th>Instructor Guide</th>
     <th>Maintainer(s)</th>
   </tr>
   <tr>
@@ -50,6 +51,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
     <td><a href="{{site.github_url}}/shell-novice" target="_blank" class="icon-github" title="The Unix Shell"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice/reference" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Unix Shell Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#devenyi_gabriel">Gabriel Devenyi</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath</a>,
@@ -62,6 +64,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
     <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Git Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
       <a href="{{site.baseurl}}/team/#huang_daisie">Daisie Huang</a>,
@@ -74,6 +77,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
     <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="Version Control with Mercurial"></a></td>
     <td><a href="{{site.github_io_url}}/hg-novice/reference" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Mercurial Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#latornell_d">Doug Latornell</a>
     </td>
@@ -83,6 +87,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, 
       Jane Wyngaard
@@ -93,6 +98,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
     <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Inflammation Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#bekolay_trevor">Trevor Bekolay</a>,
       <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>,
@@ -104,6 +110,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder" target="_blank" class="icon-browser" title="Plotting and Programming in Python"></a></td>
       <td><a href="{{site.github_url}}/python-novice-gapminder" target="_blank" class="icon-github" title="Plotting and Programming in Python"></a></td>
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python"></a></td>
+      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Gapminder Instructor Guide"></a></td>
       <td>
           <a href="{{site.baseurl}}/team/#moore_nathan">Nathan Moore</a>,
           Allen Lee, Sourav Singh
@@ -114,6 +121,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
     <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The R Infammation Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>, Katrin Leinweber
     </td>
@@ -123,6 +131,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis"></a></td>
     <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The R Gapminder Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wright_thomas">Thomas Wright</a>,
       <a href="{{site.baseurl}}/team/#zimmerman_naupaka">Naupaka Zimmerman</a>,
@@ -135,6 +144,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
     <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>
     </td>
@@ -144,15 +154,17 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
     <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
     <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Make Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#capes_gerard">Gerard Capes</a>
     </td>
   </tr>
   <tr id="training">
     <td>Instructor Training</td>
-    <td><a href="https://carpentries.github.io/instructor-training/"_blank" class="icon-browser" title="Instructor Training"></a></td>
+    <td><a href="https://carpentries.github.io/instructor-training/" target="_blank" class="icon-browser" title="Instructor Training"></a></td>
     <td><a href="https://github.com/carpentries/instructor-training" target="_blank" class="icon-github" title="Instructor Training"></a></td>
     <td><a href="https://carpentries.github.io/instructor-training/reference" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
+    <td><a href="https://carpentries.github.io/instructor-training/guide/" target="_bank" class="icon-circle-with-plus" title="The Instructor Training Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#becker_erin">Erin Becker</a>,
       <a href="{{site.baseurl}}/team/#koch_christina.html">Christina Koch</a>,
