Updated Scf_partners to inlude NWU
Added North West university as a gold member

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -104,7 +104,7 @@ excerpt: Our current partners, including our sibling organization, Data Carpentr
     {% include orgs/macquarie.html %}
   </div>
   <div class="medium-6 columns">
-
+    {% include orgs/nwu-sa.html %}
   </div>
 </div>
 
