Added NWU as Partner (#983)
* Create nwu-sa.html

created nwu-sa html file for Gold Partners

* Added NWU logo

* Updated Scf_partners to inlude NWU

Added North West university as a gold member

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -98,7 +98,7 @@ excerpt: Our current partners, including our sibling project, Data Carpentry
     {% include orgs/macquarie.html %}
   </div>
   <div class="medium-6 columns">
-
+    {% include orgs/nwu-sa.html %}
   </div>
 </div>
 
