Added new information and link to African Task Force

--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -42,9 +42,9 @@ The existing Subcommittees and Task Forces are always happy to have new people g
     <td><strong>Contact</strong></td>
   </tr>
   <tr>
-    <td>African Guides</td>
-    <td>Help instructor trainees from the April 2016 Instructor Training workshop to qualify as instructors.</td>
-    <td><a href='https://twitter.com/cloudaus'>Belinda Weaver</a></td>
+    <td><a href="/join/subcom/african-tf/">African Task Force</a></td>
+    <td>The African Task Force is involved in workshop support and instructor mentoring on the African continent.</td>
+    <td><a href='mailto:admin-afr@carpentries.org'>African Task Force</a></td>
   </tr>
   <tr>
     <td>AMY Development</td>
