--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -42,7 +42,7 @@ The existing Subcommittees and Task Forces are always happy to have new people g
     <td><strong>Contact</strong></td>
   </tr>
   <tr>
-    <td><a href='/join/subcom/subcom-african-tf/'>African Task Force</a></td>
+    <td>African Task Force</td>
     <td>The African Task Force is involved in workshop support and instructor mentoring on the African continent.</td>
     <td><a href='mailto:admin-afr@carpentries.org'>African Task Force</a></td>
   </tr>
