--- a/pages/subcom_africa.html
+++ b/pages/subcom_africa.html
@@ -19,8 +19,8 @@ activities:
 members:
   - name: "Caroline F Ajilogba"
     twitter: ""
-    twitterURL: "Mesfin Diro"
-  - name: "First Last B"
+    twitterURL: ""
+  - name: "Mesfin Diro"
     twitter: "@mesfindiro"
     twitterURL: "https://twitter.com/mesfindiro"
   - name: "Erika Mias"
