add Spanish lesson (and improve table formatting)

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -37,7 +37,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   </div>
 </div>
 
-<table class="table table-striped">
+
+<h3>Our lessons in English</h3>
+
+<table class="table table-striped" style="width: 100%; max-width: 100%">
   <tr>
     <th>Lesson</th>
     <th>Site</th>
@@ -196,6 +199,49 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   </div>
 </div>
 
+
+<h3>Our lessons in Spanish</h3>
+
+<table class="table table-striped" style="width: 100%; max-width: 100%">
+  <tr>
+    <th>Lesson</th>
+    <th>Site</th>
+    <th>Repository</th>
+    <th>Reference</th>
+    <th>Instructor Guide</th>
+    <th>Maintainer(s)</th>
+  </tr>
+  <tr>
+    <td id="shell-es">La Terminal de Unix</td>
+    <td><a href="{{site.github_io_url}}/shell-novice-es" target="_blank" class="icon-browser" title="La Terminal de Unix"></a></td>
+    <td><a href="{{site.github_url}}/shell-novice-es" target="_blank" class="icon-github" title="La Terminal de Unix"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice-es/reference" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Guide"></a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#devenyi_gabriel">Heladia Saldago</a>
+    </td>
+  </tr>
+  <tr>
+    <td id="git-es">Control de versiones con Git</td>
+    <td><a href="{{site.github_io_url}}/git-novice-es" target="_blank" class="icon-browser" title="Control de versiones con Git"></a></td>
+    <td><a href="{{site.github_url}}/git-novice-es" target="_blank" class="icon-github" title="Control de versiones con Git"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Control de versiones con Git"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Guide"></a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#devenyi_gabriel">Rayna M. Harris</a>
+    </td>
+  </tr>
+</table>
+
+<p>
+  The <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Spanish lesson template">lesson template</a> and the <a href="https://github.com/Carpentries-ES/workshop-template-es" title="Spanish workshop tempalte" target="_blank">workshop template</a> are available in Spanish. If you are interested in getting involved with our Spanish lessons <a href="#">contact us</a>.
+</p>
+
+<p>
+  La <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Estrategia de lección de español"> la plantilla de lección </a> y la <a href = "https: // github.com/Carpentries-ES/workshop-template-es "title =" plantilla de taller de español "target =" _ blank "> plantilla de taller </a> están disponibles en español. Si está interesado en participar en nuestra lección de español <a href="mailto:rayna.harris@gmail.com">contáctenos</a>.
+</p>
+
+
 <h2 id="video">Videos</h2>
 
 <p>
@@ -203,7 +249,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   additions are very welcome.
 </p>
 
-<table class="table table-striped">
+<table class="table table-striped" style="width: 100%; max-width: 100%">
   <tr>
     <td><a href="http://www.youtube.com/watch?v=T0BE9ApIegc">Version Control and Unit Testing for Scientific Software (SciPy 2013, Part 1)</a></td>
     <td><a href="{{site.baseurl}}/team/#huff_k">Katy Huff</a></td>
@@ -261,7 +307,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 <p>
   These lessons have been contributed by community members.
 </p>
-<table class="table table-striped">
+<table class="table table-striped"  style="width: 100%; max-width: 100%">
   <tr>
     <th>Lesson</th>
     <th>Site</th>
