Updating donate link

--- a/pages/join_donate.html
+++ b/pages/join_donate.html
@@ -11,8 +11,12 @@ excerpt: Support our work by donating directly to Software Carpentry
   and by <a href="{{site.baseurl}}/join/donate/">direct donations</a>
   from people like you.
 </p>
-<div align="left">
-  {% include flipcause %}
+<div align="center">
+<a href="https://carpentries.wedid.it">
+  <button class="btn">
+    Donate to The Carpentries
+  </button>
+</a>
 </div>
 <p>
   You can also buy everything from maternity shirts to messenger bags
