add mention of room set up in venue checklist

--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -502,6 +502,16 @@ excerpt: checklist for workshop operations
   </li>
   <li>
     <p>
+      <strong>A set up that encourages interaction among Learners</strong>
+      so that they can help each other,
+      and compare their results on their screens.
+      Venues where Learners are sitting by themselves,
+      or that are scattered in a room too large for the number of participants,
+      do not create the kind of interaction we strive to have in our workshops.
+    </p>
+  </li>
+  <li>
+    <p>
       <strong>High-speed WiFi or network access</strong>
       that can withstand everyone using it at the same time.
     </p>
