--- a/pages/checklists_host.html
+++ b/pages/checklists_host.html
@@ -35,7 +35,7 @@ excerpt: The responsibilities of a host at a Software Carpentry workshop
     <p>
       Where it will be:
       Is a
-      <a href="{{site.baseurl}}/workshops/operations/#venue">good venue</a> available?
+      <a href="{{site.baseurl}}/workshops/operations/#host_venue">good venue</a> available?
       Will it cost anything to book?
     </p>
   </li>
