add new maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -72,7 +72,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
       <a href="{{site.baseurl}}/team/#huang_daisie">Daisie Huang</a>,
       <a href="{{site.baseurl}}/team/#hejazi_nima">Nima Hejazi</a>,
-      Katherine Koziar
+      Katherine Koziar, Madicken Munk
     </td>
   </tr>
   <tr id="hg">
@@ -93,7 +93,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, 
-      Jane Wyngaard
+      Jane Wyngaard, Sam Hames, Henry Senyondo
     </td>
   </tr>
   <tr id="python">
@@ -105,7 +105,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td>
       <a href="{{site.baseurl}}/team/#bekolay_trevor">Trevor Bekolay</a>,
       <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>,
-      Anne Fouilloux
+      Anne Fouilloux, Maxim Belkin, Mike Trizna
     </td>
   </tr>
   <tr id="python-gap">
@@ -116,7 +116,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Gapminder Instructor Guide"></a></td>
       <td>
           <a href="{{site.baseurl}}/team/#moore_nathan">Nathan Moore</a>,
-          Allen Lee, Sourav Singh
+          Allen Lee, Sourav Singh, Olav Vahtras
       </td>
   </tr>
   <tr id="r-prog">
@@ -126,7 +126,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The R Infammation Instructor Guide"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>, Katrin Leinweber
+      <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>, Katrin Leinweber, Diya Das
     </td>
   </tr>
   <tr id="r-reproducible">
