fix accessibility redirect

--- a/pages/checklists_accessibility.html
+++ b/pages/checklists_accessibility.html
@@ -4,6 +4,6 @@ permalink: /checklists/accessibility/
 title: Accessibility Checklist
 redirect_from:
   - /workshops/checklists/accessibility.html
-redirect_ro:
+redirect_to:
   - http://docs.carpentries.org/topic_folders/hosts_instructors/workshop_needs.html#accessibility
 ---
