--- a/pages/audience.html
+++ b/pages/audience.html
@@ -1,7 +1,7 @@
 ---
 layout: page-fullwidth
 permalink: /audience/
-title: Our Audience
+title: Learner Profiles
 redirect_from:
   - /pages/audience.html
 excerpt: Software Carpentry uses learner profiles to inform what we teach
