Adding motivating testimonials to the site

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -203,3 +203,9 @@ excerpt: A list of books and articles we recommend
   </li>
 
 </ul>
+
+<h2>Motivation</h2>
+
+<ul>
+  <li><p><a href="/alternative_uses_for_code/">Alternative ways to apply coding skills</a></p></li>
+</ul>
