add spanish language maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -218,7 +218,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice-es/reference" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Guide"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#devenyi_gabriel">Heladia Saldago</a>
+      <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
+      Clara Llebot, Verónica Jiménez, Silvana Pereyra, Heladia Salgado
     </td>
   </tr>
   <tr>
@@ -228,8 +229,21 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Control de versiones con Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Guide"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#devenyi_gabriel">Rayna M. Harris</a>
+      <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
+      <a href="{{site.baseurl}}/team/#harris_rayna">Rayna Harris</a>,
+      Clara Llebot
     </td>
+  </tr>
+  <tr>
+      <td id="git-es">R para Análisis Científicos Reproducibles</td>
+      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es" target="_blank" class="icon-browser" title="R para Análisis Científicos Reproducibles"></a></td>
+      <td><a href="{{site.github_url}}/r-novice-gapminder-es" target="_blank" class="icon-github" title="R para Análisis Científicos Reproducibles"></a></td>
+      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/reference" target="_blank" class="icon-eye" title="R para Análisis Científicos Reproducibles Reference"></a></td>
+      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_bank" class="icon-circle-with-plus" title="R para Análisis Científicos Reproducibles Instructor Guide"></a></td>
+      <td>
+          <a href="{{site.baseurl}}/team/#harris_rayna">Rayna Harris</a>,
+          Verónica Jiménez, Silvana Pereyra, Heladia Salgado
+      </td>
   </tr>
 </table>
 
