remove Jane as maintainer
at her request

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -92,8 +92,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Guide"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, 
-      Jane Wyngaard, Sam Hames, Henry Senyondo
+      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, Sam Hames, Henry Senyondo
     </td>
   </tr>
   <tr id="python">
