fix urls following migration to carpentries github organization

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -185,7 +185,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <p>
       To learn more about how our lessons are structured, and why,
-      please see <a href="{{site.github_io_url}}/lesson-example">the example lesson</a>.
+      please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>.
     </p>
   </div>
   <div class="medium-4 columns">
