--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -49,9 +49,9 @@ excerpt: definition of a Software Carpentry workshop
   </div>
   <div class="medium-4 columns">
     <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
-    <a href="{{site.baseurl}}/workshops/operations/"><h4>Want to Run a Workshop?</h4></a>
+    <a href="https://docs.carpentries.org/topic_folders/hosts_instructors/index.html/"><h4>Want to Run a Workshop?</h4></a>
     <p>
-      See our <a href="{{site.baseurl}}/workshops/operations/">operations guide</a>.
+      See our <a href="https://docs.carpentries.org/topic_folders/hosts_instructors/index.html/">teaching and hosting guide</a>.
     </p>
   </div>
   <div class="medium-4 columns">
