--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -13,13 +13,13 @@ redirect_from:
 excerpt: definition of a Software Carpentry workshop
 ---
 <p>
-  A Software Carpentry workshop is hands-on two-day event
+  A Software Carpentry workshop is a hands-on, two-day event
   that covers the core skills needed to be productive in a small research team.
   Short tutorials alternate with practical exercises,
   and all instruction is done via live coding.
   <em>
     All workshop participants are required to abide by our
-    <a href="{{site.baseurl}}/conduct/">code of conduct</a>
+    <a href="https://docs.carpentries.org/topic_folders/policies/code-of-conduct.html">code of conduct</a>
     to ensure that all attendees to have an enjoyable and fulfilling experience.
   </em>
 </p>
