--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -42,9 +42,9 @@ excerpt: definition of a Software Carpentry workshop
 <div class="row">
   <div class="medium-4 columns">
     <a href="{{site.baseurl}}/workshops/"><img src="{{site.filesurl}}/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
-    <a href="{{site.baseurl}}/faq/"><h4>Want to Know More?</h4></a>
+    <a href="https://info.carpentries.org/"><h4>Want to Know More?</h4></a>
     <p>
-      See our <a href="{{site.baseurl}}/faq/">FAQ</a>.
+      See our <a href="https://info.carpentries.org/">FAQs</a>.
     </p>
   </div>
   <div class="medium-4 columns">
