update lead paragraphs

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -6,6 +6,12 @@ redirect_from:
   - /lessons.html
 excerpt: All our lessons are created collaboratively and can be freely re-used, provided you cite us as the original source
 ---
+
+
+<p>
+  A Software Carpentry workshop is taught by two trained and badged instructors. Over two days, they teach our three core topics: the Unix shell, version control with Git, and a programming language (Python or R). Curricula for these lessons in English and Spanish (select lessons only) are below.
+</p>
+
 <div class="row">
   <div class="medium-4 columns">
     <h4>Curriculum</h4>
@@ -29,13 +35,11 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4>Contributing</h4>
     <p>
-      If you have questions about contributing to particular lessons,
-      please contact their maintainers (listed below).
-      If you would like to develop new lessons,
-      please see <a href="{{site.baseurl}}/lessons/incubation/">our lesson incubation process</a>.
+      If you have questions about contributing to particular lessons, please contact their maintainers (listed below).  For information on how to contribute to our lessons, see our [contributors guide](https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md)
     </p>
   </div>
 </div>
+
 
 
 <h3>Our lessons in English</h3>
