fix md formatted link to html format

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -35,7 +35,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4>Contributing</h4>
     <p>
-      If you have questions about contributing to particular lessons, please contact their maintainers (listed below).  For information on how to contribute to our lessons, see our [contributors guide](https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md)
+      If you have questions about contributing to particular lessons, please contact their maintainers (listed below).  For information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide.</a>
     </p>
   </div>
 </div>
